# parkinsons-severity-predictor

./: .gitignore  Parkinsons.ipynb  README.md  Report of MLP  pyproject.toml
.github/workflows/: PR-checks.yml  dev.yml  manual_code_check.yml  prod.yml  train.yml
env/: base.yml  dev.txt  dev.yml  prod.yml  train.txt  train.yml
experimentations/: Classification_models.ipynb  EDA.ipynb  MLP.ipynb  Parkinson_XGBoost.ipynb  Parkinson_XGBoost_Production.ipynb
src/data/: health3features.csv  healthy_controls.csv  parkinson3features.csv  parkinsons_patients.csv
src/features/: featureextraction(rpde,dfa,ppe).ipynb
